--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <h1>Albums 2025</h1>
+        <p class="date">Last updated: May 12, 2025</p>
         <h2>Rating Scheme</h2>
         <div class="rating-guide">
             <p><strong>5/5</strong> - amazing - AOTY contender</p>
