--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <li><strong>Mournful Moon</strong> – <em>Twilight, My Passion</em> <span class="rating">(3/5)</span> <span class="genre">black/dungeon synth</span></li>
             <li><strong>Christ Dismembered</strong> – <em>Ov Vampiracy</em> <span class="rating">(3/5)</span> <span class="genre">black</span></li>
             <li><strong>Eluveitie</strong> – <em>Ànv</em> <span class="rating">(3/5)</span> <span class="genre">melodic death/folk</span></li>
+            <li><strong>Hoshimachi Suisei</strong> – <em>新星目録</em> <span class="rating">(3/5)</span> <span class="genre">j-pop</span></li>
             <li><strong>The Birthday Massacre</strong> – <em>Pathways</em> <span class="rating">(3/5)</span> <span class="genre">darkwave</span></li>
             <li><strong>Buried Realm</strong> – <em>The Dormant Darkness</em> <span class="rating">(3/5)</span> <span class="genre">melodic death/tech death</span></li>
             <li><strong>Ancient Death</strong> – <em>Ego Dissolution</em> <span class="rating">(3/5)</span> <span class="genre">death/doom</span></li>
@@ -87,6 +88,7 @@
             <li><strong>Niveous</strong> – <em>Endless Snowfall [EP]</em> <span class="rating">(2/5)</span> <span class="genre">black</span></li>
             <li><strong>Nattverd</strong> – <em>Tidloes Naadesloes</em> <span class="rating">(2/5)</span> <span class="genre">black</span></li>
             <li><strong>Vacuous</strong> – <em>In His Blood</em> <span class="rating">(2/5)</span> <span class="genre">death</span></li>
+            <li><strong>Jade</strong> – <em>Mysteries of a Flowery Dream</em> <span class="rating">(2/5)</span> <span class="genre">death/doom</span></li>
             <li><strong>Whitechapel</strong> – <em>Hymns In Dissonance</em> <span class="rating">(2/5)</span> <span class="genre">deathcore</span></li>
             <li><strong>In The Woods…</strong> – <em>Otra</em> <span class="rating">(2/5)</span> <span class="genre">progressive/atmospheric</span></li>
             <li><strong>Ulfhednar</strong> – <em>The Final Strife [EP]</em> <span class="rating">(2/5)</span> <span class="genre">melodic death/folk</span></li>
