--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
             padding: 6px 20px;
             border-radius: 10px;
             margin-bottom: 10px;
-            font-size: 1rem;
             color: #f0f0f0;
         }
 
@@ -151,7 +150,7 @@
 
         <ol class="album-list">
             <li><a href="https://www.youtube.com/watch?v=zaSiRkWC3IA" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Hagane</strong> – <em>Top of the Tower</em> <span class="rating">(5/5)</span> <span class="genre">power</span></li>
-            <li><a href="https://www.youtube.com/watch?v=7BSNAJfJWv8" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Beachside Talks</strong> – <em>Hokorobi</em> <span class="rating">(5/5)</span> <span class="genre">dream pop/shoegaze</span></li>
+            <li><a href="https://www.youtube.com/watch?v=k72FFt5rKFM" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Beachside Talks</strong> – <em>Hokorobi</em> <span class="rating">(5/5)</span> <span class="genre">dream pop/shoegaze</span></li>
             <li><a href="https://www.youtube.com/watch?v=AG3VYCHH-R8" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Sold Soul</strong> – <em>Just Like That, I Disappear Entirely</em> <span class="rating">(5/5)</span> <span class="genre">deathcore</span></li>
             <li><a href="https://www.youtube.com/watch?v=jHoNNSVIa-A" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Belnejoum</strong> – <em>Dark Tales of Zarathustra</em> <span class="rating">(5/5)</span> <span class="genre">symphonic black</span></li>
             <li><a href="https://www.youtube.com/watch?v=OzG3yCxhZiw" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>1st0</strong> – <em>2nd Chapter</em> <span class="rating">(5/5)</span> <span class="genre">power</span></li>
@@ -174,7 +173,7 @@
             <li><a href="https://www.youtube.com/watch?v=2R7XkHX1z14" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Bloody Valkyria</strong> – <em>In Our Home, Across The Fog</em> <span class="rating">(3/5)</span> <span class="genre">melodic black</span></li>
             <li><a href="https://www.youtube.com/watch?v=u_n39NI3SCE" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>East of Eden</strong> – <em>The First Eden - Seeds of Hope</em> <span class="rating">(3/5)</span> <span class="genre">power/j-rock</span></li>
             <li><a href="https://www.youtube.com/watch?v=0EMa9QxTzNI" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Shiver of Frontier</strong> – <em>Power of Great Spirits</em> <span class="rating">(3/5)</span> <span class="genre">power/symphonic</span></li>
-            <li><a href="https://www.youtube.com/watch?v=0YNMV7xljD4" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Ave Mujica</strong> – <em>Completeness</em> <span class="rating">(3/5)</span> <span class="genre">symphonic/alternative</span></li>
+            <li><a href="https://www.youtube.com/watch?v=0YNMV7xljD4" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Ave Mujica</strong> – <em>Completeness</em> <span class="rating">(3/5)</span> <span class="genre">alternative/symphonic</span></li>
             <li><a href="https://www.youtube.com/watch?v=ebSX7nnN28Q" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Fell Omen</strong> – <em>Invaded By A Dark Spirit</em> <span class="rating">(3/5)</span> <span class="genre">black/punk</span></li>
             <li><a href="https://www.youtube.com/watch?v=v0eaKqFaOys" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Teitanblood</strong> – <em>From The Visceral Abyss</em> <span class="rating">(3/5)</span> <span class="genre">war/death</span></li>
             <li><a href="https://www.youtube.com/watch?v=UtQarqIcBFM" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Hartlight</strong> – <em>The Triumph of Metal</em> <span class="rating">(3/5)</span> <span class="genre">symphonic/progressive</span></li>
@@ -186,6 +185,7 @@
             <li><a href="https://www.youtube.com/watch?v=69RjU3poW6Q" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Mournful Moon</strong> – <em>Twilight, My Passion</em> <span class="rating">(3/5)</span> <span class="genre">black/dungeon synth</span></li>
             <li><a href="https://www.youtube.com/watch?v=YyPgEi_cIZk" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Christ Dismembered</strong> – <em>Ov Vampiracy</em> <span class="rating">(3/5)</span> <span class="genre">black</span></li>
             <li><a href="https://www.youtube.com/watch?v=4I3QmjZLUvQ" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Eluveitie</strong> – <em>Ànv</em> <span class="rating">(3/5)</span> <span class="genre">melodic death/folk</span></li>
+            <li><a href="https://www.youtube.com/watch?v=kYxDvv1Puq8" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Behölder</strong> – <em>In the Temple of the Tyrant</em> <span class="rating">(3/5)</span> <span class="genre">doom/power</span></li>
             <li><a href="https://www.youtube.com/watch?v=8ZP5eqm4JqM" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Hoshimachi Suisei</strong> – <em>新星目録</em> <span class="rating">(3/5)</span> <span class="genre">j-pop</span></li>
             <li><a href="https://www.youtube.com/watch?v=BUeLi9KC7ag" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>The Birthday Massacre</strong> – <em>Pathways</em> <span class="rating">(3/5)</span> <span class="genre">darkwave</span></li>
             <li><a href="https://www.youtube.com/watch?v=kIvSDdtvBBY" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Decline of the I</strong> – <em>Wilhelm</em> <span class="rating">(3/5)</span> <span class="genre">post-black</span></li>
