--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       color: #e5e5e5;
       margin: 0 auto;
       padding: 0;
-      width: 675px;
+      width: 695px;
     }
  
     .container {
@@ -130,13 +130,13 @@
 <body>
   <div class="container">
     <h1>Albums 2025</h1>
-    <p class="date">Last updated: May 16, 2025</p>
+    <p class="date">Last updated: May 17, 2025</p>
     <h2>Rating Scheme</h2>
     <div class="rating-guide">
       <p><strong>5/5</strong> - amazing - AOTY contender</p>
       <p><strong>4/5</strong> - great - very memorable</p>
       <p><strong>3/5</strong> - pretty good - would listen again</p>
-      <p><strong>2/5</strong> - average - won't listen again</p>
+      <p><strong>2/5</strong> - disappointing - won't listen again</p>
       <p><strong>1/5</strong> - bad - has major issues</p>
     </div>
     <div class="filter-container">
@@ -157,12 +157,14 @@
       <li><a href="https://www.youtube.com/watch?v=HYHJhHfh1LY" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Warmoon Lord</strong> – <em>Sacrosanct Demonopathy</em> <span class="rating">(4/5)</span> <span class="genre">black</span></li>
       <li><a href="https://www.youtube.com/watch?v=3KVwH3i9owQ" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>The Man-Eating Tree</strong> – <em>Night Verses</em> <span class="rating">(4/5)</span> <span class="genre">gothic</span></li>
       <li><a href="https://www.youtube.com/watch?v=ykEi0R7RFQw" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Tribunal</strong> – <em>In Penitence And Ruin</em> <span class="rating">(4/5)</span> <span class="genre">doom/gothic</span></li>
+      <li><a href="https://www.youtube.com/watch?v=cT5OsqARozU" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Aeonian Sorrow</strong> – <em>From The Shadows [EP]</em> <span class="rating">(4/5)</span> <span class="genre">doom/gothic</span></li>
       <li><a href="https://www.youtube.com/watch?v=9E-f0qvqllE" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Ninkharsag</strong> – <em>Black Swords of Winter [EP]</em> <span class="rating">(3.5/5)</span> <span class="genre">melodic black</span></li>
       <li><a href="https://www.youtube.com/watch?v=XuB94zpEptU" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Havukruunu</strong> – <em>Tavastland</em> <span class="rating">(3.5/5)</span> <span class="genre">melodic black/folk</span></li>
       <li><a href="https://www.youtube.com/watch?v=BnWdqX6_2j0" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Gràb</strong> – <em>Kremess</em> <span class="rating">(3.5/5)</span> <span class="genre">melodic black</span></li>
       <li><a href="https://www.youtube.com/watch?v=ARnlm2_-Tzw" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Balzac</strong> – <em>Evil Legend Thirteen</em> <span class="rating">(3/5)</span> <span class="genre">punk rock</span></li>
       <li><a href="https://www.youtube.com/watch?v=k2U2-Wn9G1M" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Sammale</strong> – <em>Ikiharmaja</em> <span class="rating">(3/5)</span> <span class="genre">atmospheric black</span></li>
       <li><a href="https://www.youtube.com/watch?v=Q9eIGFvphWc" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Opia</strong> – <em>I Welcome Thee, Eternal Sleep</em> <span class="rating">(3/5)</span> <span class="genre">doom/gothic</span></li>
+      <li><a href="https://www.youtube.com/watch?v=xlc1kPcmGqw" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Drouth</strong> – <em>The Teeth of Time</em> <span class="rating">(3/5)</span> <span class="genre">black</span></li>
       <li><a href="https://www.youtube.com/watch?v=05uCF3kqav4" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Karg</strong> – <em>Marodeur</em> <span class="rating">(3/5)</span> <span class="genre">post-black</span></li>
       <li><a href="https://www.youtube.com/watch?v=IjdycGO8GLw" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Final Dose</strong> – <em>Under The Eternal Shadow</em> <span class="rating">(3/5)</span> <span class="genre">black/punk</span></li>
       <li><a href="https://www.youtube.com/watch?v=2R7XkHX1z14" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Bloody Valkyria</strong> – <em>In Our Home, Across The Fog</em> <span class="rating">(3/5)</span> <span class="genre">melodic black</span></li>
@@ -184,6 +186,7 @@
       <li><a href="https://www.youtube.com/watch?v=8ZP5eqm4JqM" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Hoshimachi Suisei</strong> – <em>新星目録</em> <span class="rating">(3/5)</span> <span class="genre">j-pop</span></li>
       <li><a href="https://www.youtube.com/watch?v=BUeLi9KC7ag" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>The Birthday Massacre</strong> – <em>Pathways</em> <span class="rating">(3/5)</span> <span class="genre">darkwave</span></li>
       <li><a href="https://www.youtube.com/watch?v=kIvSDdtvBBY" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Decline of the I</strong> – <em>Wilhelm</em> <span class="rating">(3/5)</span> <span class="genre">post-black</span></li>
+      <li><a href="https://www.youtube.com/watch?v=Nyuim0lH_Go" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Sleep Theory</strong> – <em>Afterglow</em> <span class="rating">(3/5)</span> <span class="genre">alternative</span></li>
       <li><a href="https://www.youtube.com/watch?v=hCScIFoNhLg" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Buried Realm</strong> – <em>The Dormant Darkness</em> <span class="rating">(3/5)</span> <span class="genre">melodic death/tech death</span></li>
       <li><a href="https://www.youtube.com/watch?v=70dJJade99s" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Ancient Death</strong> – <em>Ego Dissolution</em> <span class="rating">(3/5)</span> <span class="genre">death/doom</span></li>
       <li><a href="https://www.youtube.com/watch?v=sdfX3FKvzO0" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Imperishable</strong> – <em>Swallowing The World</em> <span class="rating">(3/5)</span> <span class="genre">death/melodic death</span></li>
@@ -211,6 +214,7 @@
       <li><a href="https://www.youtube.com/watch?v=zYJMMyTSSvc" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Náriðill</strong> – <em>Evil Is The Only Way... [EP]</em> <span class="rating">(2/5)</span> <span class="genre">black</span></li>
       <li><a href="https://www.youtube.com/watch?v=x66bZGnwKq0" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Neckbreakker</strong> – <em>Within the Viscera</em> <span class="rating">(2/5)</span> <span class="genre">death</span></li>
       <li><a href="https://www.youtube.com/watch?v=dP08ex8nbKE" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Majestica</strong> – <em>Power Train</em> <span class="rating">(2/5)</span> <span class="genre">power</span></li>
+      <li><a href="https://www.youtube.com/watch?v=wL5UpOrHTBY" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>The Callous Daoboys</strong> – <em>I Don't Want to See You in Heaven</em> <span class="rating">(2/5)</span> <span class="genre">mathcore</span></li>
       <li><a href="https://www.youtube.com/watch?v=DLG9oTH-ZbQ" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Ghost</strong> – <em>Skeletá</em> <span class="rating">(2/5)</span> <span class="genre">rock</span></li>
       <li><a href="https://www.youtube.com/watch?v=cAU1Xd-DcOI" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>UNDYING WORDS</strong> – <em>Raven In The Abyss [EP]</em> <span class="rating">(2/5)</span> <span class="genre">alternative/j-rock</span></li>
       <li><a href="https://www.youtube.com/watch?v=jViTPBCMJpw" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Niveous</strong> – <em>Endless Snowfall [EP]</em> <span class="rating">(2/5)</span> <span class="genre">black</span></li>
@@ -225,6 +229,7 @@
       <li><a href="https://www.youtube.com/watch?v=3-ZooVB85Ho" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Hans & Valter</strong> – <em>The Legend Of The Oakensource</em> <span class="rating">(2/5)</span> <span class="genre">power</span></li>
       <li><a href="https://www.youtube.com/watch?v=uzv6WaVEsAk" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>When Reasons Collapse</strong> – <em>Men Will Be The End Of Men</em> <span class="rating">(2/5)</span> <span class="genre">metalcore</span></li>
       <li><a href="https://www.youtube.com/watch?v=sIrRewJVeHI" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Arch Enemy</strong> – <em>Blood Dynasty</em> <span class="rating">(2/5)</span> <span class="genre">melodic death</span></li>
+      <li><a href="https://www.youtube.com/watch?v=U9FeJx9xmX0" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>AÝAR</strong> – <em>The Ritual: Born of Fire [EP]</em> <span class="rating">(2/5)</span> <span class="genre">death</span></li>
       <li><a href="https://www.youtube.com/watch?v=_jpfH_GmRq0" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Visionatica</strong> – <em>Harrowing Insight</em> <span class="rating">(2/5)</span> <span class="genre">symphonic</span></li>
       <li><a href="https://www.youtube.com/watch?v=IlyLrROKUQU" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Vallorch</strong> – <em>The Circle</em> <span class="rating">(2/5)</span> <span class="genre">folk</span></li>
       <li><a href="https://www.youtube.com/watch?v=42-e9zFmgPA" target="_blank" rel="noopener noreferrer" class="icon-link"><img class="icon" src="youtube.png"></a><strong>Bleed From Within</strong> – <em>Zenith</em> <span class="rating">(2/5)</span> <span class="genre">metalcore</span></li>
