--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
     <div class="filter-container">
       <h2>
         Personal Album Ranking
-        <span class="rating-info-trigger" aria-label="Rating info" role="tooltip">
+        <span class="rating-info-trigger" id="ratingInfoTrigger" role="tooltip">
           ?
-          <div class="rating-tooltip">
+          <div class="rating-tooltip" id="ratingTooltip">
             <p><strong>Rating Scheme</strong></p>
             <p><strong>5/5</strong> – amazing – AOTY contender</p>
             <p><strong>4/5</strong> – great – very memorable</p>
@@ -312,20 +312,22 @@
 
     initializeAlbumData();
 
-    // Toggle tooltip on tap for mobile
-    document.getElementById('ratingInfoTrigger').addEventListener('click', function (e) {
-      e.stopPropagation();
-      const tooltip = this.querySelector('.rating-tooltip');
+    // ========== MOBILE TOOLTIP LOGIC ==========
+
+    const trigger = document.getElementById('ratingInfoTrigger');
+    const tooltip = document.getElementById('ratingTooltip');
+
+    // Show/hide tooltip on tap (mobile) or click (fallback)
+    trigger.addEventListener('click', (e) => {
+      e.stopPropagation(); // Prevents bubbling
       const isVisible = tooltip.style.display === 'block';
-      document.querySelectorAll('.rating-tooltip').forEach(t => t.style.display = 'none');
       tooltip.style.display = isVisible ? 'none' : 'block';
     });
 
-    // Hide tooltip when tapping elsewhere
-    document.addEventListener('click', function () {
-      document.querySelectorAll('.rating-tooltip').forEach(t => t.style.display = 'none');
+    // Hide tooltip on outside tap
+    document.addEventListener('click', () => {
+      tooltip.style.display = 'none';
     });
-
   </script>
 </body>
 </html>
