--- a/index.html
+++ b/index.html
@@ -328,6 +328,15 @@
     document.addEventListener('click', () => {
       tooltip.style.display = 'none';
     });
+
+    // keep tooltip visible on hover (desktop)
+    trigger.addEventListener('mouseenter', () => {
+      tooltip.style.display = 'block';
+    });
+
+    trigger.addEventListener('mouseleave', () => {
+      tooltip.style.display = 'none';
+    });
   </script>
 </body>
 </html>
