--- a/index.html
+++ b/index.html
@@ -313,6 +313,13 @@
     }
 
     initializeAlbumData();
+
+    document.addEventListener('click', function (e) {
+      const trigger = document.getElementById('ratingInfoTrigger');
+      if (!trigger.contains(e.target)) {
+        trigger.blur(); // Remove focus = tooltip disappears
+      }
+    });
   </script>
 </body>
 </html>
